@@ -1,12 +1,13 @@
-# MingW Makefile for the mswindows subdirectory
 # This Makefile is intended to create the ViTables installer for Windows.
 # It is not intended for distribution.
 
 VERSIONFILE=..\VERSION
-VERSION=$(shell type ..\VERSION)
+#VERSION=$(shell type ..\VERSION) (syntax not supported by nmake)
 
-PYTHONVERSION=25
-DOTPYTHONVERSION=2.5
+VERSION=2.1
+
+PYTHONVERSION=26
+DOTPYTHONVERSION=2.6
 
 ROOT=..
 LICENSEFILE=$(ROOT)\LICENSE.txt
@@ -16,47 +17,40 @@ WINDOWS32=C:\\Windows\\system32
 # The NSIS intstaller script
 VTNSIS=vitables-py$(DOTPYTHONVERSION).nsi
 
-# ViTables executable. sib.py understands forward slashes
-PYTHON=C:/Python$(PYTHONVERSION)/python
-SIB="C:/Documents and Settings/vmas/Mis documentos/VendorID-1.0.0/sib"
-ICONS="$(ROOT)/vitables/icons"
+# ViTables executable
+PYTHON=C:\Python$(PYTHONVERSION)\python
+SIB="C:\Documents and Settings\vmas\Mis documentos\VendorID-1.0.0\sib\sib.py"
+ICON=$(ROOT)\vitables\icons\vitables.ico
 
-# Documentation. Docbook understands forward slashes
-GUIDE_SRC="$(ROOT)/doc/usersguide.xml"
-HTML_OPTIONS=--nonet --stringparam base.dir $(ROOT)/doc/htmldocs/
-HTML_STYLE=$(ROOT)/doc/custom_layer/html/custom_html.xsl
-FO_OPTIONS=--nonet -o $(ROOT)/doc/usersguide.fo
-FO_STYLE=$(ROOT)/doc/custom_layer/fo/custom_fo.xsl
-OUTDIR=$(ROOT)\doc\htmldocs
-CSS=$(ROOT)\doc\custom_layer\html\usersguide_style.css
+# Building the PDF documentation is currently not supported
+GUIDE_INDEX=$(ROOT)\doc\index.rst
+HTML_OUTDIR=$(ROOT)\vitables\htmldocs
 
 clean:
 	del $(ROOT)\vitables.py
-	rmdir /q /s $(OUTDIR)
-	del $(ROOT)\doc\usersguide.pdf
+	rmdir /q /s $(ROOT)\doc\_build
+	rmdir /q /s $(HTML_OUTDIR)
+#	del $(ROOT)\doc\ViTablesUsersGuide.pdf
 	del $(VTNSIS)
 	del ViTables*.win32-py$(DOTPYTHONVERSION).exe
 
 vitables.exe:
 	copy $(ROOT)\scripts\vitables .\vitables.py
-	$(PYTHON) $(SIB)/sib.py -M -u -i $(ICONS)/vitables.ico ./vitables.py
-	$(MAKE) -C build_vitables
+	$(PYTHON) $(SIB) -u -i $(ICON) ./vitables.py
+#	$(MAKE) -C build_vitables (syntax not supported by nmake)
+	cd build_vitables && $(MAKE)
 	copy build_vitables\vitables.exe .
-	del /q /s build_vitables
+	copy build_vitables\vitables.exe.manifest .
+	rmdir /q /s build_vitables
 	del .\vitables.py
-	rmdir build_vitables
 
 vtdoc:
-	xsltproc $(HTML_OPTIONS) $(HTML_STYLE) $(GUIDE_SRC)
-	mkdir $(OUTDIR)\images
-	copy $(ROOT)\doc\images\* $(OUTDIR)\images
-	copy $(CSS) $(OUTDIR)
-	copy $(ROOT)\LICENSE.html $(OUTDIR)
-	xsltproc $(FO_OPTIONS) $(FO_STYLE) $(GUIDE_SRC)
-	fop -q $(ROOT)/doc/usersguide.fo $(ROOT)/doc/usersguide.pdf
-	del $(ROOT)\doc\usersguide.fo
+	cd $(ROOT)\doc && make html
+	mkdir $(HTML_OUTDIR)
+	xcopy $(ROOT)\doc\_build\html\*.* /E $(HTML_OUTDIR)
+	copy $(ROOT)\LICENSE.html $(HTML_OUTDIR)
 
-installer: vitables.nsi.in $(VERSIONFILE) $(LICENSEFILE) vitables.exe vtdoc
+installer: vitables.nsi.in $(VERSIONFILE) $(LICENSEFILE) vtdoc vitables.exe
 	copy ..\LICENSE.html LICENSE.html
 	type vitables.nsi.in | sed -e "s/@VERSION@/$(VERSION)/g" \
 	-e "s/@PYTHONVERSION@/$(PYTHONVERSION)/g" \
@@ -69,3 +63,4 @@ installer: vitables.nsi.in $(VERSIONFILE) $(LICENSEFILE) vitables.exe vtdoc
 	makensis $(VTNSIS)
 	del LICENSE.html
 	del vitables.exe
+	del vitables.exe.manifest
