@@ -32,6 +32,7 @@ import os.path
 
 import sip
 sip.setapi('QString', 2)
+sip.setapi('QVariant', 2)
 
 from PyQt4 import QtGui
 
@@ -47,7 +48,7 @@ def main(args):
     from vitables.vtapp import VTApp
     from vitables.preferences import vtconfig
 
-    # specify the organization's Internet domain. When the Internet
+    # Specify the organization's Internet domain. When the Internet
     # domain is set, it is used on Mac OS X instead of the organization
     # name, since Mac OS X applications conventionally use Internet
     # domains to identify themselves
